--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,19 @@
 html,
 body,
 #root {
-	height: 100%;
-	margin: 0;
+  height: 100%;
+  margin: 0;
 }
 
 #root {
-	padding: 1em;
-	box-sizing: border-box;
-	background: silver;
+  padding: 1em;
+  box-sizing: border-box;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  color: inherit;
+  text-decoration: none;
 }
